--- a/mainLogic.html
+++ b/mainLogic.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+    <!-- ======================================================
+         ملف: mainLogic.html
+         الغرض:
+         - صفحة تفاصيل البوست (عرض بوست واحد وتعليقاته وإضافة تعليق).
+         - تحتوي على مودالات الدخول/التسجيل وإنشاء/حذف بوست (مشتركة).
+         - تدمج Bootstrap و Axios وتحمّل سكربت المنطق "mainLogic.js".
+         ملاحظات:
+         - تم تنظيم التعليقات كفقرات لشرح أقسام الصفحة بوضوح.
+       ====================================================== -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
@@ -11,6 +20,7 @@
    
     <title>Document</title>
 </head>
+<!-- قسم: التنسيقات العامة واللودر -->
 <style>
     body {
         background-color: rgb(242, 228, 250);
@@ -35,17 +45,18 @@
 </style>
 
 <body>
-    <!-- LOADER -->
+    <!-- قسم: اللودر (مؤشر التحميل) -->
     <div style="  top:50%;  left:50%; position: fixed ;  transform: translate(-50%, -50%);z-index: 99999; display: flex;justify-content: center; align-items: center;width: 100px;height: 100px;">
         <div class="loader" id="loder"></div>
     </div>
-    <!-- // LOADER // -->
-    <!-- ALERT -->
+    <!-- // نهاية قسم اللودر // -->
+
+    <!-- قسم: منطقة التنبيهات (Alerts) -->
         <div id="liveAlertPlaceholder"  style="position:fixed; right:0 ; bottom: 0; z-index: 99999; width:30%"></div>
-    <!-- // ALERT // -->
+    <!-- // نهاية قسم التنبيهات // -->
 
   
-    <!-- MODALS -->
+    <!-- قسم: المودالات (Login/Register/New Post/Delete) -->
         <!-- Login Modal  -->
             <div class="modal fade" id="LoginModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog " >
@@ -158,9 +169,9 @@
                     </div>
                 </div>
             </div>
-       <!-- // Delete Post Modal // -->
+       <!-- // نهاية مودال حذف البوست // -->
    
-    <!-- NAVBAR -->
+    <!-- قسم: شريط التنقل (Navbar) -->
     <div class="container">
         <div id="nav" class=" d-flex justify-content-center  mt-1  fs-4">
             <div class="col-9 ">
@@ -211,9 +222,9 @@
             </div>
         </div>
     </div>
-    <!--  // NAVBAR //-->
+    <!--  // نهاية قسم شريط التنقل //-->
 
-    <!-- MAIN CONTENT -->
+    <!-- قسم: المحتوى الرئيسي (تفاصيل البوست + التعليقات + إضافة تعليق) -->
     <div class="container  d-flex justify-content-center  mt-5  fs-4">
         <div class="col-9  ">
         <!-- username post -->
