--- a/profile.html
+++ b/profile.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+    <!-- ======================================================
+         ملف: profile.html
+         الغرض:
+         - صفحة بروفايل المستخدم: تعرض معلوماته وعدّادات نشاطه وبوستاته.
+         - تحتوي على مودالات الدخول/التسجيل وإنشاء/حذف بوست (مشتركة).
+         - تدمج Bootstrap و Axios وتحمّل سكربتات: mainLogic.js, profileScript.js
+         ملاحظات:
+         - تم تنظيم التعليقات كفقرات لشرح أقسام الصفحة بوضوح.
+       ====================================================== -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
@@ -11,6 +20,7 @@
    
     <title>Document</title>
 </head>
+<!-- قسم: التنسيقات العامة واللودر -->
 <style>
     body {
         background-color: rgb(242, 228, 250);
@@ -48,16 +58,16 @@
 </style>
 
 <body>
-    <!-- LOADER -->
+    <!-- قسم: اللودر (مؤشر التحميل) -->
     <div style="  top:50%;  left:50%; position: fixed ;  transform: translate(-50%, -50%);z-index: 99999; display: flex;justify-content: center; align-items: center;width: 100px;height: 100px;">
         <div class="loader" id="loder"></div>
     </div>
-    <!-- // LOADER // -->
-    <!-- ALERT -->
+    <!-- // نهاية قسم اللودر // -->
+    <!-- قسم: منطقة التنبيهات (Alerts) -->
         <div id="liveAlertPlaceholder"  style="position:fixed; right:0 ; bottom: 0; z-index: 99999; width:30%"></div>
-    <!-- // ALERT // -->
+    <!-- // نهاية قسم التنبيهات // -->
 
-    <!-- MODALS -->
+    <!-- قسم: المودالات (Login/Register/New Post/Delete) -->
         <!-- Login Modal  -->
             <div class="modal fade" id="LoginModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog " >
@@ -170,8 +180,8 @@
                     </div>
                 </div>
             </div>
-       <!-- // Delete Post Modal // -->
-    <!-- NAVBAR -->
+       <!-- // نهاية مودال حذف البوست // -->
+    <!-- قسم: شريط التنقل (Navbar) -->
     <div class="container">
         <div id="nav" class=" d-flex justify-content-center  mt-1  fs-4">
             <div class="col-9 ">
@@ -222,9 +232,9 @@
             </div>
         </div>
     </div>
-    <!--  // NAVBAR //-->
+    <!--  // نهاية قسم شريط التنقل //-->
 
-    <!-- PROFILE CARD -->
+    <!-- قسم: بطاقة البروفايل (معلومات المستخدم + العدادات) -->
     <div   class="container  d-flex justify-content-center  mt-5  fs-4" >
         <div  class="col-9 ">
             <div id="profileCard" >
@@ -264,15 +274,15 @@
             </div>
         </div>
   
-        <!-- // PROFILE CARD // -->
-         <!-- POST INFO -->
+        <!-- // نهاية قسم بطاقة البروفايل // -->
+         <!-- قسم: عنوان قسم البوستات للمستخدم -->
            <h1 class="p-3">
             <span id="usernameinfo">yaman</span> Posts
            </h1>
      </div>
  </div>
-         <!-- // POST INFO //-->
-          <!-- USER POSTS -->
+         <!-- // نهاية قسم العنوان //-->
+          <!-- قسم: بوستات المستخدم -->
 <div   class="container  d-flex justify-content-center   fs-4" >
         <div  class="col-9  ">
             <div id="user_posts">
